--- a/Pagina Web/main.html
+++ b/Pagina Web/main.html
@@ -33,7 +33,7 @@ SCRUM
 		la manera en la que puede influir para mejorar e incrementar la calidad de los trabajos dentro de esta area. La Ingenieria en computacion
 		es de suma importancia para el diseño de un software con calidad y una funcionalidad adecuada para satisfacer las necesidades de los clientes.</em><br>
 		<br>
-	
+		
 		<p>
 		<em>Dentro de la Ingenieria de software existe una manera de trabajo que nos ayuda a poder realizar mejor un proyecto, combinando la calidad con 
 		el tiempo y agilidad de realizar las tareas para lograr un software en menor tiempo, con menos errores y de alta calidad.
@@ -53,15 +53,35 @@ SCRUM
  </b>
  
 
-<p align="center"> 
-<form action="xxx" method=post style="text-align:center">
-<input  type="submit" name="Submit" value="Ingenieria de Software" style='width:170px; height:50px; background-color:#806DF7'>
-&nbsp;
-<input name="Submit2" type="submit" value="SCRUM" style='width:170px; height:50px; background-color:#B1F857'>
-<input name="Submit2" type="submit" value="Datos del Equipo" style='width:170px; height:50px; background-color:#E898F1'>
-</form>
-</p>
+<form method ="get" action="C:\Users\mario\Desktop\ICO_SCRUM_LINCES-master\Pagina Web\page2.html">
+<button type="submit" style= "background:#0AD8F4; font-size:20px;font-weight: 600; border: 3px double #006505";>
 
+<b > ¿Que es la Ing de Software? </b><br/>
+
+</button>
+</form>
+
+<form method ="get" action="C:\Users\mario\Desktop\ICO_SCRUM_LINCES-master\scrum\Scrum.html">
+<button type="submit" style= "background:#0AF40A; font-size:20px;font-weight: 600; border: 3px double #006505;float:center">
+
+
+
+<b > ¿Que es SCRUM? </b><br/>
+
+
+
+</button>
+</form>
+
+<form method ="get" action="C:\Users\mario\Desktop\ICO_SCRUM_LINCES-master\scrum\Scrum.html">
+<button type="submit" style= "background:#780AF4;  border: 3px double #006505; align:left; font-size:20px;font-weight: 600">
+
+<b > Datos de Colaboradores </b><br/>
+
+
+
+</button>
+</form>
 
 
 </body>
