--- a/Pagina Web/main.html
+++ b/Pagina Web/main.html
@@ -73,7 +73,7 @@ SCRUM
 </button>
 </form>
 
-<form method ="get" action="C:\Users\mario\Desktop\ICO_SCRUM_LINCES-master\scrum\Scrum.html">
+<form method ="get" action="C:\Users\mario\Desktop\ICO_SCRUM_LINCES-master\asd\Alumnos-html">
 <button type="submit" style= "background:#780AF4;  border: 3px double #006505; align:left; font-size:20px;font-weight: 600">
 
 <b > Datos de Colaboradores </b><br/>
