--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -20,8 +20,8 @@ SCRUM
                       
 					  
 					 <div>
- <img src="Media/buho.png"  hspace="5" vspace="5"  width="250" height="250" style="float: left;" />
- <img src="Media/buho.png"  hspace="5" vspace="5"  width="250" height="250" style="float: right;" />
+ <img src="ICO_SCRUM_LINCES/Pagina Web/Media/buho.png"  hspace="5" vspace="5"  width="250" height="250" style="float: left;" />
+ <img src="ICO_SCRUM_LINCES/Pagina Web/Media/buho.png"  hspace="5" vspace="5"  width="250" height="250" style="float: right;" />
  
  
 
