--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ SCRUM
                       
 					  
 					 <div>
- <img src="Pagina web/Media/buho.png"  hspace="5" vspace="5"  width="250" height="250" style="float: left;" />
- <img src="Pagina web/Media/buho.png"  hspace="5" vspace="5"  width="250" height="250" style="float: right;" />
+ <img src="Pagina Web/Media/buho.png"  hspace="5" vspace="5"  width="250" height="250" style="float: left;" />
+ <img src="Pagina Web/Media/buho.png"  hspace="5" vspace="5"  width="250" height="250" style="float: right;" />
  
  
 
