--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ SCRUM
  </b>
  
 
-<form method ="get" action="Pagina Web\page2.html">
+<form method ="get" action="page2.html">
 <button type="submit" style= "background:#0AD8F4; font-size:20px;font-weight: 600; border: 3px double #006505";>
 
 <b > ¿Que es la Ing de Software? </b><br/>
@@ -61,7 +61,7 @@ SCRUM
 </button>
 </form>
 
-<form method ="get" action="scrum\Scrum.html">
+<form method ="get" action="Scrum.html">
 <button type="submit" style= "background:#0AF40A; font-size:20px;font-weight: 600; border: 3px double #006505;float:center">
 
 
@@ -73,7 +73,7 @@ SCRUM
 </button>
 </form>
 
-<form method ="get" action="asd\Alumnos.html">
+<form method ="get" action="Alumnos.html">
 <button type="submit" style= "background:#780AF4;  border: 3px double #006505; align:left; font-size:20px;font-weight: 600">
 
 <b > Datos de Colaboradores </b><br/>
